--- a/app/src/main/res/layout/add_zoom_details.xml
+++ b/app/src/main/res/layout/add_zoom_details.xml
@@ -1,21 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/defaultBackgroundColor"
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/organizer"
+            android:id="@+id/meetingTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/defaultFontColor"
             android:ems="10"
             android:gravity="center"
-            android:hint="Organizer"
-            android:inputType="textPersonName" />
+            android:hint="@string/meeting_title"
+            android:inputType="textPersonName"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/defaultFontColor"
+            android:textColorHint="@color/defaultFontColor" />
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="@color/defualtViewColor" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,19 +37,31 @@
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/defaultFontColor"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Date"
-                android:inputType="date" />
+                android:inputType="date"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="@color/defaultFontColor"
+                android:textColorHint="@color/defaultFontColor" />
 
             <Button
                 android:id="@+id/buttonDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="@drawable/buttonshape"
                 android:onClick="pickDate"
-                android:text="Pick Zoom Date" />
+                android:text="Pick Zoom Date"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
         </LinearLayout>
+
+        <View
+            android:id="@+id/view2"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="@color/defualtViewColor" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -52,24 +75,40 @@
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Time"
-                android:inputType="time" />
+                android:inputType="time"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="@color/defaultFontColor"
+                android:textColorHint="@color/defaultFontColor" />
 
             <Button
                 android:id="@+id/buttonTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Pick Zoom Time" />
+                android:background="@drawable/buttonshape"
+                android:text="Pick Zoom Time"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         </LinearLayout>
+
+        <View
+            android:id="@+id/view3"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="@color/defualtViewColor" />
 
         <EditText
             android:id="@+id/link"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/defaultFontColor"
             android:ems="10"
             android:gravity="center"
             android:hint="Link"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/defaultFontColor"
+            android:textColorHint="@color/defaultFontColor" />
     </LinearLayout>
+
 </RelativeLayout>
