--- a/app/src/main/res/layout/zoom_recyclerview.xml
+++ b/app/src/main/res/layout/zoom_recyclerview.xml
@@ -1,41 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:background="@color/defaultBackgroundColor"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
 
         <TextView
-            android:id="@+id/recyclerOrganizer"
+            android:id="@+id/recyclerMeetingTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:paddingTop="20dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/defaultFontColor" />
 
         <TextView
             android:id="@+id/recyclerDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/defaultFontColor" />
 
         <TextView
             android:id="@+id/recyclerTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/recyclerLink"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/defaultFontColor" />
 
         <Button
             android:id="@+id/openZoomLink"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:background="@drawable/buttonshape"
+            android:text="@string/open_zoom"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/defaultBackgroundColor" />
+
     </LinearLayout>
+
+    <View
+        android:id="@+id/view4"
+        android:layout_width="wrap_content"
+        android:layout_height="10dp"
+        android:background="@color/defualtViewColor"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="196dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
