--- a/app/src/main/res/drawable/buttonshape.xml
+++ b/app/src/main/res/drawable/buttonshape.xml
@@ -2,12 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
         <corners
             android:topLeftRadius="28dp"
-            android:topRightRadius="0dp"
+            android:topRightRadius="28dp"
             android:bottomLeftRadius="28dp"
             android:bottomRightRadius="28dp"
             />
         <solid
-            android:color="#E3F2FD"
+            android:color="@color/butons"
             />
         <padding
             android:left="0dp"
