--- a/app/src/main/res/layout/zoom_recyclerview.xml
+++ b/app/src/main/res/layout/zoom_recyclerview.xml
@@ -3,19 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingBottom="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/defaultBackgroundColor"
         android:orientation="vertical"
+        android:paddingBottom="10dp"
         tools:ignore="MissingConstraints">
 
         <TextView
             android:id="@+id/recyclerMeetingTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:paddingTop="20dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/defaultFontColor" />
@@ -24,6 +27,7 @@
             android:id="@+id/recyclerDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/defaultFontColor" />
 
@@ -31,6 +35,7 @@
             android:id="@+id/recyclerTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/defaultFontColor" />
 
@@ -39,6 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/buttonshape"
+            android:gravity="center"
             android:text="@string/open_zoom"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/defaultBackgroundColor" />
@@ -50,6 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="10dp"
         android:background="@color/defualtViewColor"
+        android:visibility="invisible"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteY="196dp" />
 
