--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,10 @@
     <color name="colorPrimary">#879CE3</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="defaultBackgroundColor">#001441</color>
-    <color name="defaultFontColor">#E3F2FD</color>
-    <color name="defualtViewColor">#FFFF</color>
+    <color name="defaultBackgroundColor">#F4F5F6</color>
+    <color name="recyclerViewBackground">#2F425F</color>
+    <color name="defaultFontColor">#0009D1</color>
+    <color name="defualtViewColor">#2F425F</color>
+    <color name="butons">#003D99</color>
+    <color name="header">#2F425F</color>
 </resources>
