--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:onClick="addZoomOpenPopup"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -11,21 +12,36 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/addZoom"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/buttonshape"
-            android:onClick="addZoomOpenPopup"
-            android:text="Add Zoom Link"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/defaultBackgroundColor"
-            android:textStyle="bold" />
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewZooms"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/recyclerViewBackground" />
+            android:background="@color/recyclerViewBackground" >
+
+        </androidx.recyclerview.widget.RecyclerView>
+
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="end|bottom"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@color/defaultBackgroundColor"
+        android:onClick="addZoomOpenPopup"
+        android:src="@drawable/ic_plus"
+        app:backgroundTint="@color/butons"
+        app:fabSize="normal"
+        app:maxImageSize="50dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="339dp"
+        tools:layout_editor_absoluteY="270dp" />
+
+</RelativeLayout>
