--- a/app/src/main/res/layout-land/zoom_recyclerview.xml
+++ b/app/src/main/res/layout-land/zoom_recyclerview.xml
@@ -70,7 +70,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:defaultFocusHighlightEnabled="false"
-            android:text="Weekly" />
+            android:text="Weekly"
+            android:textStyle="bold" />
 
     </FrameLayout>
 
